--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -5,10 +5,10 @@
   <h2 class="text-5xl font-bold text-white text-center pt-20">T-Lab Academy</h2>
 </div>
 <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
-<h3 class="text-2xl font-bold text-white mb-5 text-white">Our Courses</h3>
+<h3 class="text-2xl font-bold text-white mb-5 text-white p-8">Our Courses</h3>
 <div id="productContainer" class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
-  <div class="bg-zinc-950 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academy post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
-  <div class="bg-zinc-950 p-4 rounded-lg shadow-md mb-4 transparent-background"><img src="{% static 'img/course 2.jpeg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class=" transparent-background text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
+  <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academy post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
+  <div class="bg-zinc-950 mx-8 p-4 rounded-lg shadow-md mb-4 transparent-background"><img src="{% static 'img/course 2.jpeg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class=" transparent-background text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
 
 </div>
 </section>
@@ -34,16 +34,10 @@
         </ul>
         
         <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
-        <div class="flex items-center bg-zinc-950 rounded-3xl p-3 px-8 space-x-4 my-6 mx-3 w-fit ">
-          <div class="flex flex-col text-gray-200 px-4">
-            <p>0112 814 304</p>
-            <p>077 729 2992</p>
+          <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
+            <div>
+            <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
           </div>
-          <div class="px-4">
-          <a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" class="h-10 w-10 bg-white rounded-full p-2" src="{% static 'img/whatsapp.png' %}" />
-          </a>
-          </div>
-
         </div>
       </section>
     </div>
@@ -54,11 +48,16 @@
         <img src="{% static 'img/academy post.jpg'%}"  class="rounded-lg">
       </div>
     </div>
+    <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
+      <div class="">
+        <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+      </a>
+    </div>
   </div>   
 </div> 
 </section>
 <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
-  <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Our lectures</h3>
+  <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Lectures</h3>
   <div  class="px-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
     <div class="bg-black p-4 rounded-lg shadow-md mb-4">
       <img src="{% static 'img/Thusith.jpeg' %}" class="w-full h-48 object-contain mb-4 rounded-2xl" alt="Thusith Niroshana">
@@ -95,16 +94,10 @@
           </ul>
           
           <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
-          <div class="flex items-center bg-zinc-950 rounded-3xl p-3 px-8 space-x-4 my-6 mx-3 w-fit ">
-            <div class="flex flex-col text-gray-200 px-4">
-              <p>0112 814 304</p>
-              <p>077 729 2992</p>
+            <div class="hidden sm:flex flex-row items-center rounded-3xl p-3  space-x-4 my-6 mx-2 justify-center  ">
+              <div>
+              <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
             </div>
-            <div class="px-4">
-            <a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" class="h-10 w-10 bg-white rounded-full p-2" src="{% static 'img/whatsapp.png' %}" />
-            </a>
-            </div>
-  
           </div>
         </section>
       </div>
@@ -115,11 +108,16 @@
           <img src="{% static 'img/course 2.jpeg'%}"  class="rounded-lg">
         </div>
       </div>
+      <div class=" sm:hidden flex items-center justify-center rounded-3xl p-2 px-8 space-x-4 my-6 mx-3 ">
+        <div class="">
+          <a href="#" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Apply now</a>
+        </a>
+      </div>
     </div>   
   </div> 
   </section>
   <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
-    <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Our lectures</h3>
+    <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Lectures</h3>
     <div  class="px-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
       <div class="bg-black p-4 rounded-lg shadow-md mb-4">
         <img src="{% static 'img/Thusith.jpeg' %}" class="w-full h-48 object-contain mb-4 rounded-2xl" alt="Thusith Niroshana">
