--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -140,30 +140,30 @@
       <div class="cards" style="margin-left: 5vw; margin-right: 5vw; margin-bottom: 40px; margin-top: 40px;">
 
         <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Trusted audio recording Services </p>
+          <p class="text-2xl p-4 text-md ">Trusted audio recording Services </p>
           <i class="fas fa-microphone custom-large-icon"></i>
-          <p class="text-gray-500">T-lab production house is the proud home to 2 state-of–the-art sound recording
+          <p class="text-gray-500 text-sm">T-lab production house is the proud home to 2 state-of–the-art sound recording
             studios which are managed by professional team of sound engineers and composers.</p>
           <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Music Composing | Mix & Mastering Services</p>
+          <p class="text-2xl p-4 text-md">Music Composing | Mix & Mastering Services</p>
           <i class="fas fa-headphones custom-large-icon"></i>
-          <p class="text-gray-500">T-lab offers a wide range of services for music composing and sound designing for
+          <p class="text-gray-500 text-sm">T-lab offers a wide range of services for music composing and sound designing for
             solo artists as well as groups. </p>
           <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Video production </p>
+          <p class="text-2xl p-4 text-md">Video production </p>
           <i class="fas fa-video custom-large-icon"></i>
-          <p class="text-gray-500">T-lab production house not only offers a variety of services for audio productions
+          <p class="text-gray-500 text-sm">T-lab production house not only offers a variety of services for audio productions
             but, we also offer a variety of services for video productions.</p>
           <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
-          <p class="text-2xl p-4"> Graphic Designing services</p>
+          <p class="text-2xl p-4 text-md"> Graphic Designing services</p>
           <i class="fas fa-video custom-large-icon"></i>
-          <p class="text-gray-500">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
+          <p class="text-gray-500 text-sm">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
           <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
       </div>
