--- a/home/templates/whoweare.html
+++ b/home/templates/whoweare.html
@@ -45,15 +45,13 @@
     </div>
   </section>
 
-  <section class=" flex items-center justify-center bg-section">
+  <section class="flex-col justify-center">
     <div class="animated-text">
-              
-      <p class="text-white text-m text-m p-8 mt-8">
-        T-Lab excels in audio and video services for national and international clients, renowned for hit collaborations with Centigradz. The company also crafts music for major brands, radio, TV, tele-dramas, films, and events, offering advanced sound recording services.        <div class="flex items-center justify-center p-4">
-          <a href="#" class="m-2 inline-block px-8 py-2 rounded-full text-white bg-red-600">Our Productions</a>
-          
-      </div>
-  </div>
+        <p class="text-gray-200 text-center text-m text-m p-8 mt-8">Explore our portfolio, including famous TV commercials, original songs, video productions and more .</p>
+        <div class="flex items-center justify-center p-4">
+          <a href="#" class="m-2 inline-block px-8 py-2 rounded-full text-white bg-orange-500">Our Productions</a>
+        </div>
+     </div>
   
   </section>
 
