--- a/allstatic/styles.css
+++ b/allstatic/styles.css
@@ -66,8 +66,8 @@ h3 {
 
 /*Card Layout*/
 .cards {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 15px;
 }
 
@@ -101,6 +101,7 @@ h3 {
   border-radius: 10px;
   color: white;
   cursor: pointer;
+  width: 100px !important;
   transition: 400ms;
 
   @media (max-width: 767px) {
