--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -17,7 +17,7 @@
         </div>
     
         <div class="flex items-center mx-4 ">
-            <input id="searchInput" type="text" placeholder="Search..." class="mx-3 px-2 py-1 border border-gray-300 rounded-3xl focus:outline-none mb-2 sm:mb-0">
+            <input id="searchInput" type="text" placeholder="Search..." class="mx-3 px-2 py-1 border border-gray-300 rounded-3xl focus:outline-none mb-2 sm:mb-0" style="width: 220px;">
             <button id="searchButton" class="ml-2 px-4 py-1 bg-orange-500 text-white rounded-3xl">Search</button>
         </div>
     </div>
