our productions update

--- a/home/templates/ourproduction.html
+++ b/home/templates/ourproduction.html
@@ -51,38 +51,38 @@
   </style> 
 <section id="our-works" class="pt-10">
   <div class="animated-text">
-    <h2 class="text-5xl font-bold text-white text-center pt-10">Our Production</h2>
+    <h2 class="text-5xl font-bold text-white text-center pt-10">Our Productions</h2>
     <p class="text-gray-500 p-8 text-center" style="padding: 1vw 5vw">We've mastered the art of
       crafting captivating TV commercials (TVCs) and producing memorable songs, showcasing our ability to blend
       creativity and storytelling in both visual and auditory realms</p>
   </div>
   <section class="section border-b border-orange-500">
-    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mb-5 text-white">TV Commercials</h3>
+    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mb-5 text-white">TV Commercial Soundtrack Productions</h3>
     <div class="container mx-auto p-4 px-8">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/eAPcXyJyi9U?si=ntJvAsfuStRKgDpz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-             <h2 class="text-xs text-gray-300 mt-4 font-bold">Arjun x Piyal - Oye Ojaye (Official Music Video)</h2>
-             <P class="text-xs text-gray-500 mb-2">Music Production - Thusith Niroshana | T-Lab Studios </P>
+            <iframe src="https://www.youtube.com/embed/cxoN3ZZ5v7s?si=lmuEXSojbfyeD37G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>             
+            <h2 class="text-xs text-gray-300 mt-4 font-bold">Asian Paints TVC with Kumar Sangakkara</h2>
+             <P class="text-xs text-gray-500 mb-2">Music | T-LAB Studios (Thusith Niroshana)</P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/9asbrzM24jA?si=FU2xNLLuKp4P7LjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-4">Mal Mal Sariya (මල් මල් සාරිය) | by Sandalindu Duggannarala (Official Lyric Video)</h2>
-            <P class="text-xs text-gray-500 mb-2">Music composed & Mix by : Thusith Niroshana | T-Lab Studios</P>
+            <iframe src="https://www.youtube.com/embed/nczgJ2YDZ1E?si=3ulWBjuDql3D8TJf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            <h2 class="text-xs text-gray-300 mt-4">DFCC Teen Account TVC Sinhala</h2>
+            <P class="text-xs text-gray-500 mb-2">Music | Aloka Somarathna | T-Lab Studios | Audio Cube</P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/9fGMxM92fQY?si=MWiI3cG-wBTXhbn1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" class="items-center justify-center" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-2">Sindagana (සිදඟන) Manjula Pushpakumara | Official Music Video | Sinhala Songs</h2>
-            <P class="text-xs text-gray-500 mb-2">Music - Thusith Niroshana | T-Lab Studios </P>
+            <iframe src="https://www.youtube.com/embed/zlQKBJRpuCQ?si=dVm_QUcK4nmbmcWR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Nestomolt TVC</h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-Lab Studios </P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
-            <iframe src="https://www.youtube.com/embed/daItj81IDMs?si=x6uLv0k0XCkvoTbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2 class="text-xs text-gray-300 mt-2">Sindagana (සිදඟන) Manjula Pushpakumara | Official Music Video | Sinhala Songs</h2>
-            <P class="text-xs text-gray-500 mb-2">Remix by - Thusith Niroshana | T-Lab Studios  </P>
+            <iframe src="https://www.youtube.com/embed/hLOd46ecJvw?si=n5bzD8KWCZs_YmHa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Maliban White Chocolate Puff Chocolate Puff Tvc </h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-LAB Studios </P>
           </div>
           <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 items-center ">
             <h2 class="text-xs text-gray-300 m-2">Click here to watch our all of TV Commercials</h2>
-            <iframe src="https://www.youtube.com/embed/videoseries?si=ULjFnvoT6MSAjaap&amp;list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/videoseries?si=ULjFnvoT6MSAjaap&amp;list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB" width="200px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
       </div>
   </div>
@@ -112,11 +112,40 @@
             <h2 class="text-xs text-gray-300 mt-2">Sindagana (සිදඟන) Manjula Pushpakumara | Official Music Video | Sinhala Songs</h2>
             <P class="text-xs text-gray-500 mb-2">Remix by - Thusith Niroshana | T-Lab Studios  </P>
           </div>
-          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 items-center ">
-            <h2 class="text-xs text-gray-300 m-2">Click here to watch our all of TV Commercials</h2>
-            <iframe src="https://www.youtube.com/embed/videoseries?si=ULjFnvoT6MSAjaap&amp;list=PLc9zDvEQ-YwScqHZ96wgyFtDiQBAQhQWB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div>
       </div>
+  </div>
+  
+  </section>
+  <section class="section border-b border-orange-500">
+    <h3 class="px-14 py-3 text-2xl font-bold text-orange-500 mt-3 mb-5 text-white">Films and TV theme songs</h3>
+    <div class="container mx-auto p-4 px-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 my-2 mx-8">
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/04Fjw2mgYpQ?si=oI3eR8oCd3-_GlyG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+             <h2 class="text-xs text-gray-300 mt-4 font-bold">Pahasara - Centigradz</h2>
+             <P class="text-xs text-gray-500 mb-2">Melody | Music  : Thusith Niroshana<br>Mixed & Mastered: T-Lab Studios
+               </P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/766JL6-16mw?si=BJaYtZOgB9fgriGj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-4">Hello Hello - Chinthy,Centigradz,Ashanthi</h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-Lab Studios</P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/0xMj0G0otf8?si=dEsvLTLTgY1wYTam" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Diurala Pawasanna Centigradz - Sulanga Teledrama Theme song</h2>
+            <P class="text-xs text-gray-500 mb-2">Composers-Centigredz </P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe src="https://www.youtube.com/embed/JVWCga8kiss?si=OqKQUt8H5V5CxR63" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Obata Nohaka (Mal Dewata Theme Song) - Ishan Lanthra (Centigradz)</h2>
+            <P class="text-xs text-gray-500 mb-2">Music - T-Lab Studios  </P>
+          </div>
+          <div class=" flex-col bg-zinc-950 shadow-md rounded-lg p-4 flex ">
+            <iframe  src="https://www.youtube.com/embed/C84_0b3Du-U?si=I03EvDjiJgaGPMk-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="text-xs text-gray-300 mt-2">Widinna Himi Wu Jeewithe (විඳින්න හිමි වූ ජීවිතේ ) | Sujatha Drama Theme Song</h2>
+            <P class="text-xs text-gray-500 mb-2">Melody & Music - Thusith Niroshan </P>
+          </div>
   </div>
   
   </section>
