--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -162,11 +162,12 @@
         </div>
         <div class="card red border border-orange-500">
           <p class="text-2xl p-4 text-md"> Graphic Designing services</p>
-          <i class="fas fa-video custom-large-icon"></i>
+          <i class="fas fa-image custom-large-icon"></i>
           <p class="text-gray-500 text-sm">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
           <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
       </div>
+      
     </div>
 
     </div>
