--- a/home/templates/ourservices.html
+++ b/home/templates/ourservices.html
@@ -33,7 +33,7 @@
         <div class="flex items-center justify-center p-8">
           <a href="https://wa.link/3spd48"
             class="m-2 inline-block px-8 py-2 font-semibold text-white bg-orange-600 hover:bg-orange-700 rounded-3xl">
-            Book now</a>
+            Chat now</a>
           </a>
         </div>
       </section>
@@ -80,7 +80,7 @@
       <div class="flex items-center justify-center p-8">
         <a href="https://wa.link/3spd48"
           class="m-2 inline-block px-8 py-2 font-semibold text-white bg-orange-600 hover:bg-orange-700 rounded-3xl">
-          Book now</a>
+          Chat now</a>
         </a>
       </div>
     </section>
@@ -127,7 +127,7 @@
       <div class="flex items-center justify-center p-8">
         <a href="https://wa.link/3spd48"
           class="m-2 inline-block px-8 py-2 font-semibold text-white bg-orange-600 hover:bg-orange-700 rounded-3xl">
-          Book now</a>
+          Chat now</a>
         </a>
       </div>
     </section>
